# ig_projet

./: .clang-format  .gitignore  CMakeLists.txt  flake.nix
.github/workflows/: ci.yml
lib/glad/: CMakeLists.txt  glad.c  glad.h
resources/: select.frag  select.vert  shader.frag  shader.vert
src/: CMakeLists.txt  exceptions.h  main.cpp  mesh.h  polyscope_openmesh.cpp  polyscope_openmesh.h
src/base/: CMakeLists.txt  IOException.cpp  IOException.h  Mesh.cpp  Mesh.h  ops.cpp  ops.h
src/glow/: CMakeLists.txt  Framebuffer.cpp  Program.cpp  Shader.cpp
src/glow/include/glow/: Resource.h
src/glow/include/glow/buffers/: Buffer.h  IndexBuffer.h  UniformBuffer.h  VertexArray.h  VertexBuffer.h
src/glow/include/glow/shaders/: Program.h  Shader.h  ShaderException.h
src/glow/include/glow/textures/: Framebuffer.h  Texture.h
src/renderer/: CMakeLists.txt  Shell.cpp  Shell.h
src/shell/: CMakeLists.txt  Color.cpp  Color.h  EventListener.h  OpenMeshUpload.h  Renderer.cpp  Renderer.h  SdlException.h  Shell.cpp  Shell.h  System.h  UniformBindings.h  events.h
src/shell/components/: Light.h  PanOrbitCamera.cpp  PanOrbitCamera.h  Time.cpp  Time.h
src/shell/gl/: Camera.cpp  Camera.h  ClearColor.h  Color.cpp  Color.h  Mesh.cpp  Mesh.h  PickingSystem.cpp  PickingSystem.h  ProgramRef.h  Renderer.cpp  Renderer.h  Transform.cpp  Transform.h
src/shell/gl/resource/: Resource.h
src/shell/gl/resource/buffers/: Buffer.h  IndexBuffer.h  UniformBuffer.h  Vertex.h  VertexArray.h  VertexBuffer.h
src/shell/gl/resource/shaders/: Program.cpp  Program.h  Shader.cpp  Shader.h  ShaderException.h
src/shell/systems/: EventListener.h  OpenMeshUpload.cpp  OpenMeshUpload.h  PanOrbitSystem.cpp  PanOrbitSystem.h  System.h
src/transforms/: CMakeLists.txt  Deform.cpp  Deform.h  Laplace.cpp  Laplace.h
